--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -179,7 +179,7 @@ tox:
   parallel:
     matrix:
       - PY_MAJVER: 3
-        PY_MINVER: [7, 8, 9, 10, 11, 12]
+        PY_MINVER: [8, 9, 10, 11, 12]
   needs: []
 
 pages:
